--- a/style.css
+++ b/style.css
@@ -875,12 +875,17 @@ section:nth-child(odd) .animate.scroll {
   }
 
   .home-sci {
-    width: 160px;
+    width: 90px;
   }
 
   .home-sci a {
     width: 38px;
     height: 38px;
+    top: 28px;
+  }
+
+  .btn-box .btn {
+    bottom: 20px;
   }
 }
 
