--- a/style.css
+++ b/style.css
@@ -570,6 +570,10 @@ span {
   width: 70%;
 }
 
+.skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span {
+  width: 28%;
+}
+
 .skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
   width: 90%;
 }
